--- a/about_me.html
+++ b/about_me.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <header>
-      <a class="link-header" href="leonov.html">Дорохов Иван</a>
+      <a class="link-header" href="about_me_2.html">Дорохов Иван</a>
     </header>
     <main>
       <nav>
